securing-flink-ui-2b/k8s/3-oidc-auth-nginx-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          command:
            - /bin/sh
            - '-c'
            - |
              luarocks config local_by_default true
              luarocks install lua-resty-openidc
              /usr/local/openresty/nginx/sbin/nginx -g "daemon off;"
          ports:
            - containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: nginx-config
              mountPath: /usr/local/openresty/nginx/conf/nginx.conf
              subPath: nginx.conf
            - name: nginx-tls
              mountPath: /etc/nginx/tls
            - name: oidc-tls
              mountPath: /etc/nginx/oidc/tls
            - name: shared-volume
              mountPath: /.luarocks
            - name: shared-volume
              mountPath: /.cache
            - name: shared-volume
              mountPath: /usr/local/openresty/nginx/logs
            - name: shared-volume
              mountPath: /usr/local/openresty/luajit/lib/luarocks
            - name: shared-volume
              mountPath: /var/run/openresty
          image: 'openresty/openresty:alpine-fat'
      volumes:
        - name: shared-volume
          emptyDir: { }
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: oidc-tls
          secret:
            secretName: oidc-tls-secret
        - name: nginx-tls
          secret:
            secretName: nginx-tls-secret
